--- a/source/site/scss/main.scss
+++ b/source/site/scss/main.scss
@@ -1,8 +1,5 @@
 body {
-  background-image: none;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position-y: center;
+  background-color: white;
   margin: 0;
 }
 
@@ -23,15 +20,15 @@ body {
 .navbar a {
   float: right;
   display: block;
-  color: black;
+  color: 1A181E;
   text-align: center;
   padding: 18px 16px;
   text-decoration: none;
 }
 
 .navbar a:hover {
-  background: #ddd;
-  color: black;
+  background-color: 7C786B;
+  color: EFE2E4;
 }
 
 .revelalogo {
@@ -43,6 +40,7 @@ body {
   text-align: center;
   text-decoration: none;
   padding-left: 15px;
+  color: 783812;
 }
 
 main {
@@ -58,7 +56,8 @@ main {
     background-size: cover;
     background-position-y: center;
     width: 100%;
-    padding:40px 40px;
+    padding-top:40px;
+    padding-bottom: 40px;
     margin: 100px;
     text-align: center;
     color: white;
@@ -73,15 +72,85 @@ main {
     display: absolute;
     position: relative;
     text-align: center;
-    color: white;
+    color: EFE2E4;
   }
 
-  .nextsection {
-    background-color: #E2E2E3;
+  .separator {
+    height: 50px;
+  }
+
+  .left {
+    float: left;
+    width: 50%;
+    background-color: CE955B;
+  }
+
+  .right {
+    float: right;
+    width: 50%;
+    background-color: 7C786B;
+  }
+
+  .about {
+    background-color: white;
     width: 100%;
     text-align: center;
     color: black;
   }
+
+  .products {
+    background-color: #CE955B;
+    width: 100%;
+    text-align: center;
+    color: black;
+  }
+
+  .services {
+    background-color: #7C786B;
+    width: 100%;
+    text-align: center;
+    color: black;
+  }
+
+  .contact {
+    background-color: #1A181E;
+    width: 100%;
+    color: EFE2E4;
+  }
+
+  .contactleft {
+    float: left;
+    width: 50%;
+  }
+
+  .contactleft p {
+    padding-left: 25%
+  }
+
+  .contactleft ul {
+    list-style-type: none;
+    display: inline-block;
+    text-align: justify;
+    margin-top: 0;
+    padding-left: 25%;
+    font-size: 14px;
+  }
+
+  .contactright {
+    float: right;
+    width: 50%;
+  }
+
+  .contactright p {
+    padding-left: 45%
+  }
+
+  .contactright ul {
+    list-style-type: none;
+    display: inline-block;
+    text-align: justify;
+    margin-top: 0;
+    padding-left: 45%;
+    font-size: 14px;
+  }
 }
-
-
